# qazcode_rpa

./: .editorconfig  .env.example  .gitignore  .ignore  AGENTS.md  CLAUDE.md  Cargo.toml  EWorkbeelinerpaUNDO_REDO_ANALYSIS.md  FINDINGS_INDEX.md  IF_NODE_RECURSION_FINDINGS.md  LOOP_IMPLEMENTATION_FINDINGS.md  QUICK_REFERENCE.md  README.md  SEARCH_FINDINGS.md  UNDO_REDO_VIABILITY.md  opencode.json
.beads/: config.yaml  issues.jsonl
.claude/: clipboard_analysis.md  settings.local.json
.claude/agents/: rust-systems-investigator.md
.opencode/agent/: git-master.md  issue-agent.md
crates/arc_script/: Cargo.toml
crates/arc_script/src/: ast.rs  evaluator.rs  lexer.rs  lib.rs  parser.rs  token.rs  value.rs  variable_type.rs
crates/office/: Cargo.toml
crates/office/src/: lib.rs
crates/office/src/excel/: mod.rs
crates/office/src/outlook/: mod.rs
crates/office/src/word/: mod.rs
crates/office/tests/: excel_tests.rs  outlook_tests.rs  word_tests.rs
crates/pdf-viewer/: Cargo.toml  build.rs
crates/pdf-viewer/src/: app.rs  constants.rs  error.rs  lib.rs  main.rs  widget.rs
crates/pdf-viewer/src/anchor/: content.rs  extractor.rs  mod.rs  polygon.rs  position.rs  regex_anchor.rs  relative.rs  resolver.rs  template.rs  types.rs
crates/pdf-viewer/src/ui/: anchor_overlay.rs  anchor_panel.rs  canvas.rs  controls.rs  mod.rs  viewer_panel.rs
crates/pdf-viewer/src/viewer/: cache.rs  mod.rs  pdf_loader.rs  state.rs  text_analyzer.rs
crates/rpa-cli/: Cargo.toml  build.rs
crates/rpa-cli/src/: main.rs
crates/rpa-core/: Cargo.toml
crates/rpa-core/src/: activity_metadata.rs  canvas_grid.rs  constants.rs  evaluator.rs  evaluator_adapter.rs  events.rs  execution.rs  ir.rs  lib.rs  log.rs  node_graph.rs  stop_control.rs  utils.rs  validation.rs  variables.rs
crates/rpa-studio/: Cargo.toml  test_i18n.rs
crates/rpa-studio/locales/: en.yml  kz.yml  ru.yml
crates/rpa-studio/src/: activity_ext.rs  app.rs  canvas_grid.rs  collision.rs  colors.rs  custom.rs  dialogs.rs  events.rs  file_io.rs  loglevel_ext.rs  main.rs  settings.rs  state.rs  ui.rs  ui_constants.rs  undo_redo.rs
crates/rpa-studio/src/ext/: loglevel_ext.rs  mod.rs  node_ext.rs  project_ext.rs  scenario_ext.rs
crates/rpa-studio/src/ui/: canvas.rs  components.rs  config.rs  connection_renderer.rs  interface.rs  ir_debugger.rs  mod.rs  visibility_graph.rs
crates/rpa-studio/src/ui_explorer/: mod.rs  properties.rs  window_tree.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  nanoid.rs
crates/ui-automation/: Cargo.toml  README.md
crates/ui-automation-sys/: Cargo.toml  build.rs
crates/ui-automation-sys/c/include/: element.h  uia_wrapper.h  utils.h  window.h
crates/ui-automation-sys/c/src/: element.c  ui_automation.c  utils.c  window.c
crates/ui-automation-sys/src/: lib.rs
crates/ui-automation/examples/: basic_usage.rs
crates/ui-automation/src/: element.rs  error.rs  generator.rs  lib.rs  selector.rs  types.rs  window.rs
crates/ui-automation/src/linux/: automation.rs  mod.rs  selector.rs
crates/ui-automation/src/win32/: automation.rs  mod.rs  selector.rs
crates/ui-automation/tests/: generator_tests.rs  integration_test.rs  selector_tests.rs  ui_automation_tests.rs
crates/ui-explorer/: Cargo.toml  build.rs
crates/ui-explorer/src/: app.rs  lib.rs  main.rs  properties.rs  render.rs  state.rs  window_tree.rs
tools/validate_locale/: Cargo.toml
tools/validate_locale/src/: main.rs
