[workspace]
resolver = "2"
members = [
    "crates/rpa-core",
    "crates/rpa-cli",
    "crates/rpa-studio",
    "crates/office",
    "tools/validate_locale",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nanoid = "0.4"
indexmap = { version = "2.0", features = ["serde"] }
rust-i18n = "3"

[workspace.package]
version = "0.4.0"
edition = "2024"

[profile.release]
debug = true
