[workspace]
resolver = "2"
members = [
    "crates/rpa-core",
    "crates/rpa-cli",
    "crates/rpa-studio",
    "crates/office",
    "tools/validate_locale",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nanoid = "0.4"
indexmap = { version = "2.0", features = ["serde"] }
rust-i18n = "3"

[workspace.package]
version = "0.4.0"
edition = "2024"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = { level = "deny", priority = -1 }
dead_code = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = "deny"
pedantic = "warn"
nursery = "warn"

[profile.release]
debug = true
