[workspace]
resolver = "2"
members = [
  "crates/rpa-core",
  "crates/rpa-cli",
  "crates/rpa-studio",
  "crates/shared",
  "crates/ui-explorer",
  "crates/office",
  "crates/arc_script",
  "tools/validate_locale",
  "crates/ui-automation",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nanoid = "0.4"
indexmap = { version = "2.0", features = ["serde"] }
rust-i18n = "3"
uuid = { version = "1.0", features = ["v4"] }

[workspace.package]
version = "0.7.0"
edition = "2024"

[workspace.lints.rust]
unused = { level = "deny", priority = -1 }
dead_code = { level = "deny", priority = -1 }

[workspace.lints.clippy]
missing-errors-doc = "allow"
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[profile.release]
debug = true
