[package]
name = "office"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
calamine = "=0.22.0"
rust_xlsxwriter = "=0.92.2"
docx-rs = "0.4"
chrono = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
dotenv = "0.15"

[build-dependencies]
windows-bindgen = "0.65"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Variant",
    "Win32_Globalization",
] }

[dev-dependencies]
tempfile = "3.8"

[[test]]
name = "excel_tests"
path = "tests/excel_tests.rs"

[[test]]
name = "word_tests"
path = "tests/word_tests.rs"

[[test]]
name = "outlook_tests"
path = "tests/outlook_tests.rs"
