[package]
name = "rpa-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rpa-cli"
path = "src/main.rs"

[dependencies]
rpa-core = { path = "../rpa-core" }
arc_script = { path = "../arc_script" }
clap = { version = "4.5", features = ["derive"] }
indexmap.workspace = true
serde_json.workspace = true
dhat = { version = "0.3.3", optional = true }
egui-wgpu = "0.33.3"

[features]
dhat-heap = ["dhat"]

[build-dependencies]
embed-resource = "2.5.2"
