[package]
name = "rpa-studio"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rpa-studio"
path = "src/main.rs"

[dependencies]
rpa-core = { path = "../rpa-core" }
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = "0.33.3"
egui_code_editor = "0.2.20"
rfd = "0.15"
syntect = "5.3.0"
once_cell = "1.21.3"
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
rust-i18n.workspace = true
image = "0.25.9"
nanoid.workspace = true

[build-dependencies]
embed-resource = "2.5.2"
