[package]
name = "ui-explorer"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ui-explorer"
path = "src/main.rs"

[dependencies]
ui-automation = { path = "../ui-automation" }
shared = { path = "../shared" }
eframe = "0.33.3"
egui = { version = "0.33", features = ["serde"] }
rfd = "0.15"
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
image = "0.25.9"
nanoid.workspace = true

[build-dependencies]

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.5.2"
